--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".activity.ArticleActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".activity.ArticleListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
