--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,8 +45,7 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.github.sharish:ShimmerRecyclerView:v1.3'
 
-    implementation 'com.google.firebase:firebase-analytics:17.4.3'
-    implementation 'com.google.firebase:firebase-database:19.3.0'
+    implementation 'com.google.firebase:firebase-firestore:21.4.3'
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
